--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon -e js,ejs,css index.js",
+    "create_db": "psql -U postgres -f sql/create_db.sql",
+    "create_tables": "psql -U postgres -d project6_inventory_management -f sql/create_tables.sql",
+    "seed_tables": "psql -U postgres -d project6_inventory_management -f sql/seed_tables.sql",
+    "setup_db": "npm run create_db && npm run create_tables && npm run seed_tables",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
